AC_PREREQ([2.68])
AC_INIT([lbzip2], [1.0])

AC_CONFIG_SRCDIR([src/main.c])
AC_CONFIG_AUX_DIR([build-aux])
AC_CONFIG_HEADERS([lib/config.h])

AM_INIT_AUTOMAKE([1.11])
AM_SILENT_RULES([yes])

AC_PROG_RANLIB
AC_PROG_CC_C89
gl_EARLY

AC_C_CONST
AC_C_VOLATILE
AC_SYS_LARGEFILE

dnl Headers
AC_HEADER_STDC
AC_CHECK_HEADERS([arpa/inet.h])
AC_CHECK_HEADERS([fcntl.h])
AC_CHECK_HEADERS([limits.h])
AC_CHECK_HEADERS([stddef.h])
AC_CHECK_HEADERS([sys/time.h])

dnl Types
AC_TYPE_UINT8_T
AC_TYPE_UINT16_T
AC_TYPE_INT32_T
AC_TYPE_UINT32_T
AC_TYPE_INT64_T
AC_TYPE_UINT64_T
AC_TYPE_PID_T
AC_TYPE_OFF_T
AC_TYPE_SIZE_T
AC_TYPE_SSIZE_T

dnl Functions
AC_FUNC_MALLOC
AC_CHECK_FUNCS([bzero])
AC_CHECK_FUNCS([gettimeofday])
AC_CHECK_FUNCS([strrchr])
AC_CHECK_FUNCS([strtol])
AC_FUNC_LSTAT_FOLLOWS_SLASHED_SYMLINK

gl_INIT

AC_CONFIG_FILES([Makefile src/Makefile yambi/Makefile lib/Makefile
    doc/Makefile])
AC_OUTPUT
